--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -152,7 +152,7 @@
 
                             <TextView
                                 android:id="@+id/genre"
-                                style="@style/DetailViewTextMedium"
+                                style="@style/DetailViewTextSmall"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
@@ -160,7 +160,7 @@
 
                             <TextView
                                 android:id="@+id/countries"
-                                style="@style/DetailViewTextMedium"
+                                style="@style/DetailViewTextSmall"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
@@ -209,6 +209,36 @@
                                     android:text="Status "
                                     android:visibility="gone" />
                             </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+                                <TextView
+                                    android:id="@+id/budget"
+                                    style="@style/DetailViewTextSmall"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="left"
+                                    android:text="Budget"/>
+
+                                <TextView
+                                    android:id="@+id/revenue"
+                                    style="@style/DetailViewTextSmall"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="left"
+                                    android:text="Revenue" />
+                            </LinearLayout>
+
+                            <TextView
+                                android:id="@+id/homepage"
+                                style="@style/DetailViewTextSmall"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:gravity="center_vertical"
+                                android:text="homepage" />
 
                             <TextView
                                 android:id="@+id/prod_companies"
