--- a/app/src/main/res/layout/activity_person_profile.xml
+++ b/app/src/main/res/layout/activity_person_profile.xml
@@ -86,7 +86,7 @@
                     android:src="@drawable/ic_star_border_black_24dp" />
 
                 <TextView
-                    android:id="@+id/text_rating"
+                    android:id="@+id/popularity"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
@@ -98,12 +98,12 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="15dp"
                     android:gravity="center_vertical"
-                    android:text="imdb_raiting" />
+                    android:text="popularity" />
 
             </LinearLayout>
 
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/person"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:elevation="4dp"
@@ -138,7 +138,7 @@
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:id="@+id/movie_poster"
+                            android:id="@+id/personal_image"
                             android:layout_width="@dimen/movie_details_image_layout_width"
                             android:layout_height="@dimen/movie_details_image_layout_height"
                             android:src="@drawable/no_movie_poster"
@@ -151,73 +151,36 @@
                             android:orientation="vertical">
 
                             <TextView
-                                android:id="@+id/genre"
+                                android:id="@+id/placeOfBirth"
                                 style="@style/DetailViewTextMedium"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
-                                android:text="Genre" />
+                                android:text="Place of birth" />
 
                             <TextView
-                                android:id="@+id/countries"
+                                android:id="@+id/birthday"
                                 style="@style/DetailViewTextMedium"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
-                                android:text="Countries " />
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="5dp"
-                                android:orientation="horizontal">
-                                <TextView
-                                    android:id="@+id/movie_duration"
-                                    style="@style/DetailViewTextSmall"
-                                    android:layout_width="0dp"
-                                    android:layout_weight="1"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="left"
-                                    android:text="movie duration" />
-                                <TextView
-                                    android:id="@+id/text_language"
-                                    style="@style/DetailViewTextSmall"
-                                    android:layout_width="0dp"
-                                    android:layout_weight="1"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="left" />
-                            </LinearLayout>
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-                                <TextView
-                                    android:id="@+id/movie_date"
-                                    style="@style/DetailViewTextSmall"
-                                    android:layout_width="0dp"
-                                    android:layout_weight="1"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="left" />
-
-                                <TextView
-                                    android:id="@+id/status"
-                                    style="@style/DetailViewTextSmall"
-                                    android:layout_width="0dp"
-                                    android:layout_weight="1"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="left"
-                                    android:text="Status "
-                                    android:visibility="gone" />
-                            </LinearLayout>
+                                android:text="Birthday" />
 
                             <TextView
-                                android:id="@+id/prod_companies"
+                                android:id="@+id/deathday"
+                                style="@style/DetailViewTextMedium"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:gravity="center_vertical"
+                                android:text="Deathday" />
+
+                            <TextView
+                                android:id="@+id/homepage"
                                 style="@style/DetailViewTextSmall"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
-                                android:layout_marginTop="5dp"
-                                android:text="Prod Companies" />
+                                android:text="Homepage" />
 
                             <TextView
                                 android:id="@+id/imdb_id"
@@ -232,7 +195,7 @@
 
                     <!--- Description -->
                     <TextView
-                        android:id="@+id/person_description"
+                        android:id="@+id/biography"
                         style="@style/DetailViewTextMedium"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -259,11 +222,11 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Movies"
+                        android:text="Movie Credits"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
                     <GridView
-                        android:id="@+id/cast_data"
+                        android:id="@+id/credit_movies_data"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:columnWidth="@dimen/movie_details_image_layout_width"
@@ -271,6 +234,32 @@
                         android:numColumns="auto_fit"
                         android:stretchMode="columnWidth"
                         android:verticalSpacing="@dimen/movie_guide_gridview_vertical_spacing" />
+
+                    <TextView
+                        android:id="@+id/credit_cast_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Cast"
+                        android:layout_marginTop="2dp"
+                        android:textAppearance="@style/DetailViewTextMediumBlack" />
+                    <LinearLayout
+                        android:id="@+id/credit_cast_data"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical" />
+
+                    <TextView
+                        android:id="@+id/credit_crew_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Crew"
+                        android:layout_marginTop="2dp"
+                        android:textAppearance="@style/DetailViewTextMediumBlack" />
+                    <LinearLayout
+                        android:id="@+id/credit_crew_data"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical" />
 
                 </LinearLayout>
 
