--- a/app/src/main/res/layout/movie_review_list_item.xml
+++ b/app/src/main/res/layout/movie_review_list_item.xml
@@ -14,7 +14,8 @@
      See the License for the specific language governing permissions and
      limitations under the License.
  -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/review_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
