--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -17,7 +17,7 @@
 <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/home_movie.root"
+        android:id="@+id/item_home_card"
         android:layout_width="120dp"
         android:layout_height="190dp"
         android:foreground="?attr/selectableItemBackground"
@@ -31,7 +31,7 @@
             android:layout_height="match_parent">
 
         <ImageView
-                android:id="@+id/home_movie.poster"
+                android:id="@+id/item_home_poster"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
@@ -39,7 +39,7 @@
                 tools:src="@drawable/disk_reel"/>
 
         <TextView
-                android:id="@+id/home_move.title"
+                android:id="@+id/item_home_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
