--- a/app/src/main/res/layout/fragment_universal.xml
+++ b/app/src/main/res/layout/fragment_universal.xml
@@ -15,10 +15,8 @@
  -->
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.xengar.android.movieguide.ui.UniversalFragment">
+    android:layout_height="match_parent" >
 
     <GridView
         android:id="@+id/gridview"
@@ -29,5 +27,23 @@
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
         android:verticalSpacing="@dimen/movie_guide_gridview_vertical_spacing" />
+
+    <fr.castorflex.android.circularprogressbar.CircularProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:indeterminate="true"
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="-48dp"
+        style="@style/InMovieCircularProgressBar"
+        android:visibility="gone"/>
+
+    <com.xengar.android.movieguide.utils.CustomErrorView
+        android:id="@+id/error"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 
 </RelativeLayout>
