--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -19,20 +19,17 @@
     <PreferenceCategory
         android:title="@string/pref_header_general"
         android:key="pref_key_storage_settings_general">
-<!--
-        // NOTE: EditTextPreference accepts EditText attributes.
-        // NOTE: EditTextPreference's summary should be set to its value by the activity code.
-        <EditTextPreference
-            android:icon="@drawable/ic_info_black_24dp"
-            android:capitalize="words"
-            android:defaultValue="@string/pref_default_display_name"
-            android:inputType="textCapWords"
-            android:key="example_text"
-            android:maxLines="1"
-            android:selectAllOnFocus="true"
-            android:singleLine="true"
-            android:title="@string/pref_title_display_name" />
--->
+
+        <ListPreference
+            android:icon="@drawable/ic_language_black_24dp"
+            android:defaultValue=""
+            android:entries="@array/query_languages_titles"
+            android:entryValues="@array/query_languages_values"
+            android:key="@string/pref_query_language"
+            android:negativeButtonText="@null"
+            android:positiveButtonText="@null"
+            android:title="@string/pref_title_query_language" />
+
         <SwitchPreference
             android:icon="@drawable/ic_toolbar_black_24dp"
             android:defaultValue="true"
@@ -64,64 +61,4 @@
 
     </PreferenceCategory>
 
-<!--
-    <PreferenceCategory
-        android:title="@string/pref_header_notifications"
-        android:key="pref_key_storage_settings_notifications">
-
-        // A 'parent' preference, which enables/disables child preferences (below)
-        // when checked/unchecked.
-        <SwitchPreference
-            android:icon="@drawable/ic_notifications_black_24dp"
-            android:defaultValue="true"
-            android:key="notifications_new_message"
-            android:title="@string/pref_title_new_message_notifications" />
-
-        // Allows the user to choose a ringtone in the 'notification' category.
-        // NOTE: This preference will be enabled only when the checkbox above is checked.
-        // NOTE: RingtonePreference's summary should be set to its value by the activity code.
-        <RingtonePreference
-            android:icon="@drawable/ic_notifications_black_24dp"
-            android:defaultValue="content://settings/system/notification_sound"
-            android:dependency="notifications_new_message"
-            android:key="notifications_new_message_ringtone"
-            android:ringtoneType="notification"
-            android:title="@string/pref_title_ringtone" />
-
-        // NOTE: This preference will be enabled only when the checkbox above is checked.
-        <SwitchPreference
-            android:icon="@drawable/ic_notifications_black_24dp"
-            android:defaultValue="true"
-            android:dependency="notifications_new_message"
-            android:key="notifications_new_message_vibrate"
-            android:title="@string/pref_title_vibrate" />
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:title="@string/pref_header_data_sync"
-        android:key="pref_key_storage_settings_data_sync">
-
-        // NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it.
-        // NOTE: ListPreference's summary should be set to its value by the activity code.
-        <ListPreference
-            android:icon="@drawable/ic_sync_black_24dp"
-            android:defaultValue="180"
-            android:entries="@array/pref_sync_frequency_titles"
-            android:entryValues="@array/pref_sync_frequency_values"
-            android:key="sync_frequency"
-            android:negativeButtonText="@null"
-            android:positiveButtonText="@null"
-            android:title="@string/pref_title_sync_frequency" />
-
-        // This preference simply launches an intent when selected. Use this UI sparingly, per
-        //     design guidelines.
-        <Preference
-            android:icon="@drawable/ic_sync_black_24dp"
-            android:title="@string/pref_title_system_sync_settings">
-            <intent android:action="android.settings.SYNC_SETTINGS" />
-        </Preference>
-
-    </PreferenceCategory>
--->
 </PreferenceScreen>
