--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -48,6 +48,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin">
 
                 <TextView
+                    android:id="@+id/movies_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -77,7 +78,7 @@
                 </android.support.v7.widget.RecyclerView>
 
                 <fr.castorflex.android.circularprogressbar.CircularProgressBar
-                    android:id="@+id/progressBarMovies"
+                    android:id="@+id/progress_bar_movies"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:indeterminate="true"
@@ -103,6 +104,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin">
 
                 <TextView
+                    android:id="@+id/tv_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -131,7 +133,7 @@
                 </android.support.v7.widget.RecyclerView>
 
                 <fr.castorflex.android.circularprogressbar.CircularProgressBar
-                    android:id="@+id/progressBarTV"
+                    android:id="@+id/progress_bar_tv"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:indeterminate="true"
