--- a/app/src/main/res/layout/fragment_universal.xml
+++ b/app/src/main/res/layout/fragment_universal.xml
@@ -18,15 +18,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <GridView
-        android:id="@+id/gridview"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnWidth="@dimen/movie_guide_gridview_column_width"
-        android:horizontalSpacing="@dimen/movie_guide_gridview_horizontal_spacing"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="@dimen/movie_guide_gridview_vertical_spacing" />
+        android:layout_height="match_parent"/>
 
     <fr.castorflex.android.circularprogressbar.CircularProgressBar
         android:id="@+id/progressBar"
